--- a/documentation/serenity-js.org/package.json
+++ b/documentation/serenity-js.org/package.json
@@ -21,6 +21,7 @@
     "@docusaurus/plugin-client-redirects": "2.4.0",
     "@docusaurus/plugin-ideal-image": "2.4.0",
     "@docusaurus/preset-classic": "2.4.0",
+    "@docusaurus/remark-plugin-npm2yarn": "2.4.0",
     "@giscus/react": "2.2.8",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
