--- a/integration/webdriverio-mocha/package.json
+++ b/integration/webdriverio-mocha/package.json
@@ -33,6 +33,7 @@
     "@serenity-js/mocha": "^3.0.0",
     "@serenity-js/webdriverio": "^3.0.0",
     "@wdio/cli": "8.12.2",
+    "@wdio/globals": "8.12.1",
     "@wdio/local-runner": "8.12.1",
     "@wdio/spec-reporter": "8.12.2",
     "webdriverio": "8.12.1"
