--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -66,7 +66,7 @@
   "dependencies": {
     "@serenity-js/core": "3.7.2",
     "@serenity-js/web": "3.7.2",
-    "@wdio/reporter": "^8.12.2",
+    "@wdio/reporter": "8.12.2",
     "deepmerge": "^4.3.1",
     "tiny-types": "^1.20.0"
   },
@@ -74,8 +74,8 @@
     "@serenity-js/cucumber": "^3.0.0",
     "@serenity-js/jasmine": "^3.0.0",
     "@serenity-js/mocha": "^3.0.0",
-    "@wdio/cli": "^8.12.2",
-    "webdriverio": "^8.12.1"
+    "@wdio/cli": "^8.13.14",
+    "webdriverio": "^8.13.13"
   },
   "peerDependenciesMeta": {
     "@serenity-js/cucumber": {
@@ -91,10 +91,10 @@
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
     "@types/mocha": "^10.0.1",
-    "@wdio/cli": "8.12.2",
-    "@wdio/devtools-service": "8.12.1",
+    "@wdio/cli": "8.13.14",
+    "@wdio/devtools-service": "8.13.13",
     "@wdio/dot-reporter": "8.12.2",
-    "@wdio/local-runner": "8.12.1",
+    "@wdio/local-runner": "8.13.13",
     "@wdio/spec-reporter": "8.12.2",
     "@wdio/types": "8.10.4",
     "axios": "^1.4.0",
@@ -105,6 +105,6 @@
     "mocha-testdata": "^1.2.0",
     "puppeteer-core": "^20.8.1",
     "start-server-and-test": "^2.0.0",
-    "webdriverio": "8.12.1"
+    "webdriverio": "8.13.13"
   }
 }
