--- a/documentation/serenity-js.org/package.json
+++ b/documentation/serenity-js.org/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
     "@tsconfig/docusaurus": "1.0.7",
-    "typescript": "^5.2.2"
+    "typescript": "5.1.6"
   },
   "browserslist": {
     "production": [
