--- a/examples/protractor-jasmine-todomvc/package.json
+++ b/examples/protractor-jasmine-todomvc/package.json
@@ -48,6 +48,6 @@
     "npm-failsafe": "^1.0.0",
     "protractor": "^7.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "5.1.6"
   }
 }
