--- a/examples/webdriverio-mocha/package.json
+++ b/examples/webdriverio-mocha/package.json
@@ -47,6 +47,6 @@
     "npm-failsafe": "^1.0.0",
     "webdriverio": "8.15.10",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "5.1.6"
   }
 }
