--- a/integration/webdriverio-web/package.json
+++ b/integration/webdriverio-web/package.json
@@ -63,6 +63,6 @@
     "wdio-chromedriver-service": "8.1.1",
     "webdriverio": "8.15.10",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "5.1.6"
   }
 }
