--- a/packages/local-server/package.json
+++ b/packages/local-server/package.json
@@ -72,6 +72,6 @@
     "restify": "^11.1.0",
     "semver": "^7.5.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "5.1.6"
   }
 }
