--- a/integration/webdriverio-cucumber/package.json
+++ b/integration/webdriverio-cucumber/package.json
@@ -32,7 +32,7 @@
     "@integration/testing-tools": "3.0.0",
     "@serenity-js/core": "^3.0.0",
     "@serenity-js/cucumber": "^3.0.0",
-    "@serenity-js/webdriverio": "^3.0.0",
+    "@serenity-js/wdio-cucumber-framework": "^3.0.0",
     "@wdio/cli": "8.15.10",
     "@wdio/local-runner": "8.15.10",
     "@wdio/reporter": "8.15.10",
