--- a/packages/protractor/package.json
+++ b/packages/protractor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/protractor",
   "version": "3.25.2",
-  "description": "Serenity/JS adapter for Protractor, enabling the use of the Serenity/JS web library to write end-to-end test scenarios, and leveraging Serenity/JS reporting capabilities",
+  "description": "Adapter that integrates @serenity-js/web with Protractor, enabling Serenity/JS reporting and using the Screenplay Pattern to write end-to-end test scenarios",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
