--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@serenity-js/webdriverio",
   "version": "3.25.2",
-  "description": "Serenity/JS adapter for WebdriverIO, enabling the use of the Serenity/JS web library to write web- and mobile-based test scenarios, and leveraging Serenity/JS reporting capabilities",
+  "description": "Adapter that integrates @serenity-js/web with WebdriverIO, enabling Serenity/JS reporting and using the Screenplay Pattern to write web and mobile test scenarios",
   "author": {
     "name": "Jan Molak",
     "email": "jan.molak@smartcodeltd.co.uk",
