--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -46,8 +46,10 @@
   "dependencies": {
     "@serenity-js/core": "3.25.2",
     "@serenity-js/web": "3.25.2",
-    "playwright-core": "1.45.3",
     "tiny-types": "1.22.0"
+  },
+  "peerDependencies": {
+    "playwright-core": "~1.45.3"
   },
   "devDependencies": {
     "@integration/testing-tools": "3.0.0",
@@ -56,6 +58,7 @@
     "c8": "10.1.2",
     "mocha": "10.7.0",
     "mocha-multi": "1.1.7",
+    "playwright-core": "1.45.3",
     "ts-node": "10.9.2",
     "typescript": "5.2.2"
   }
