--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
+    "@playwright/test": "1.45.3",
     "@types/chai": "4.3.16",
     "@types/chai-as-promised": "7.1.8",
     "@types/istanbul-lib-coverage": "2.0.6",
