--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,7 +58,7 @@ jobs:
       node-version: 18.x
       npm-install-command: make BOOTSTRAP_SCOPE=@serenity-js install
       download-artifact-name: 'compiled-libs'
-      command: make test-no-coverage-node16
+      command: make test-no-coverage
 
   test-linux-node-lts-next:
     name: 'Test: Linux, LTS+1'
