feat(serenity-bdd): vend Serenity BDD CLI jar file as part of @serenity-js/serenity-bdd package
This change should simplify overall setup experience for most of the cases by eleminating the need
to run "serenity-bdd update" manually. Default version of Serenity BDD will be saved into default
directory and will be included into files under the default path of the package and published to
NPM registry.

This change does not affect current customization capabilities in any way, it's still possible to
set custom cache directory or set specific version of Serenity BDD.

Related tickets: #2560

--- a/integration/protractor-web/package.json
+++ b/integration/protractor-web/package.json
@@ -19,8 +19,7 @@
   ],
   "scripts": {
     "clean": "rimraf target",
-    "test": "failsafe clean test:update-serenity test:acceptance test:report",
-    "test:update-serenity": "serenity-bdd update --ignoreSSL",
+    "test": "failsafe clean test:acceptance test:report",
     "test:acceptance": "cross-env PORT=8081 start-server-and-test start http://localhost:8081 test:acceptance:run",
     "start": "npx web-specs-start",
     "test:acceptance:run": "c8 protractor protractor.conf.js",
